deploy/argocd/manifests/applications/todo-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api 
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: placeholder
  template:
    metadata:
      labels:
        app: placeholder
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: todo-api
          image: todo-api
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10 
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "256Mi"
