deploy/argocd/manifests/applications/todo-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api
  namespace: todo
spec:
  type: ClusterIP
  selector:
    app: todo-api
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
